fixed toolbar z-index

--- a/src/assets/toolbar/less/widget.less
+++ b/src/assets/toolbar/less/widget.less
@@ -6,7 +6,7 @@
 #sidebar-wrapper {
   position: fixed;
   top: 0;
-  z-index: 1000;
+  z-index: 1100;
   width: 768px;
   max-width: 80%;
   margin-left: -768px;
